src/scss/components/_navigation.scss
nav {
    width: 75px;
    position: fixed;
    -webkit-backface-visibility: hidden;
    color: $black;
    text-align: center;
    padding: 0 0;
    z-index: 1;
    .menu-trigger {
        width: 34px;
        height: 30px;
    }

}

button.language-switcher {
    background-color: transparent;
    outline: none;
    border: none;
    color: $black;
    padding: 0;
    position: fixed;
    bottom: 30px;
    left: 37px;
    transform: translate(-50%, -50%);
    font-family: $type_sans;
    font-size: 11px;
    line-height: 1;
    z-index: 2;
}

@media (max-height: 768px) {
    nav {
        .logo {
           // top: 50%;
        }
    }
}

@media (max-width: 545px) {
    nav {
        width: 55px;
    }
    button.language-switcher {
        left: 27px;
    }
}

.small-screen {
    position: absolute;
    top: 2em;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
    width: 18px;
    height: 18px;
    span {
        position: relative;
        display: block;
        width: 18px;
        height: 2px;
        margin-bottom: 5px;
        background-color: $black;
        transform-origin: 5px 0px;
        transition: 
            transform 0.2s cubic-bezier(0.77,0.2,0.05,1.0),
            background 0.2s cubic-bezier(0.77,0.2,0.05,1.0),
            opacity 0.55s ease;
      &:first-child {
        transform-origin: 0% 0%;
      }
      &:nth-last-child(2){
        transform-origin: 0% 100%;
      }
    }
  }

   #small-nav {
    display: none;
  }

  .menu__items {
    position: fixed; 
    overflow: hidden;
    height: 100%;
    height: 100vh;
    clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
    opacity: 0; 
    background-color: $white;
    -webkit-font-smoothing: antialiased;
    transform-origin: 0% 0%;
    transform: translate(-100%, 0);
    transition: transform 0.6s cubic-bezier(0.77,0.2,0.05,1.0);
    z-index: 1;
    ul {
        list-style-type: none;
        margin: 0;
        padding: 0;
    }
    
}

  label {
    cursor: pointer;
  }
  #small-nav {
    &:checked ~ .menu__items {
        position: absolute;
        top: 0;
        width: 190px;
        height: 100vh;
        margin: 0;
        transform: scale(1.0, 1.0);
        clip-path: none;
        background-color: rgba(255, 255, 255, 0.9);
        opacity: 1;
        transition: opacity .4s ease-in;
        ul {
           margin-top: 7.3em; 
           padding-left: 30px;
           height: 90vh;
           font-size: 11px;
           text-transform: uppercase;
           .menu__heading {
               color: #999;
               padding: 0;
               margin-left: 0;
               span {
                    padding-left: 0;
               }
               &.about {
                    padding-top: 3em;  
                }
           }
           ul {
               border: none;
               margin-top: 2em;
               padding-left: 0;
               height: auto;
               li {
                    color: $black;
                    padding-left: 0;
                    margin-left: 0;  
               }
           }
        }
        
      } 
      &:checked ~ .menu__items li  {
        margin-bottom: 1.364em;
        text-align: left;
        margin-left: 3em;
        a {
            text-decoration: none;
        }
      }
      &:checked ~ label span {
        
        opacity: 1;
        transform: rotate(-45deg) translate(2px, -5px);
      }
      &:checked ~ label span:nth-last-child(2) {
        opacity: 0;
        transform: rotate(0deg) scale(0.2, 0.2);
      } 
      &:checked ~ label span:nth-last-child(3) {
        
        opacity: 1;
        transform: rotate(45deg) translate(1px, -1px);
      }
    }

// @media (max-width: 768px) {
//   #small-nav {
//     &:checked ~ .menu__items {
//       height: 105%;
//     }
//   }
// }

@media (max-width: 545px) {
    #small-nav {
        &:checked ~ .menu__items {
            ul {
                margin-left: 0;
            }
        }
    }
    
}

#posts-navigation {
    position: fixed;
    top: 50%;
    width: 100%;
    a.nav-previous,
    a.nav-next {
        position: absolute;
        width: 18px;
        height: 20px;
        background-repeat: no-repeat;
        background-position: center center;
     } 
    a.nav-previous {
        right: 30px;
        background-image: url('/admin/wp-content/themes/pop/public/media/arrow-navigation-right.png');
    }
    a.nav-next {
        left: 30px;
        background-image: url('/admin/wp-content/themes/pop/public/media/arrow-navigation-left.png');
    }
}


@media (max-width: 1366px) {
    #posts-navigation {
        a.nav-previous {
            right: 8px;
        }
        a.nav-next {
            left: 8px;
        }
    }
}

